css/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}


/* Paar standaard waardes die je later makkelijk weer opnieuw kunt gebruiken */
:root {
    --clr-groen: #4A7C00;
    --clr-dark-green:  #1B701B;
    --clr-wit: #FFFFFF;
    --clr-black: #000000;

    --fw-reg: 300;
    --fw-bold: 900;

    --fs-h1: 3rem;
    --fs-h2: 2.25rem;
    --fs-h3: 1.25rem;
    --fs-body: 1rem;

    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
          0.125em 0.125em 0.25em rgba(0,0,0,.15);
}


html {
    scroll-behavior: smooth;
}

body {
    height: 100%;
    background: var(--clr-wit);
    color: var(--clr-groen);
    margin: 0;
    font-family: 'Montserrat', serif;
    font-weight: 300;
    text-transform: uppercase;
    font-size: var(--fs-body);
    line-height: 1.6;
    overflow-x: hidden;
}

img {
    display: block;
    max-width: 100%;
}

/* Koppen */

h1,
h2,
h3 {
    line-height: 1.1;
    margin: 0;
}

h1 {
    font-size: var(--fs-h1);
}
h2 {
    font-size: var(--fs-h2);
}
h3 {
    font-size: var(--fs-h3);
}


/* Header / Menu */

nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: var(--clr-wit);
    transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 50%;
}

.nav-links li{
    list-style: none;
}

.nav-links a{
    color: var(--clr-groen);
    text-decoration: none;
    letter-spacing: 2px;
    font-size: 1vw;
    font-family: 'Montserrat', serif;
    font-weight: bold;
    text-transform: uppercase;
}

.nav-links a:hover{
    border: none;
    border-bottom: 2px solid var(--clr-groen);
    outline: none;
}

.logout_button {
    height: 3vh;
    border-radius: 2vw;
    border: none;
    color: var(--clr-wit);
    background-color: var(--clr-groen);
    letter-spacing: 2px;
    font-family: 'Montserrat', serif;
    font-weight: 900;
    text-transform: uppercase;
    outline: none;
}

.logout_button:hover{
    background-color: #1b701b;
    cursor: pointer;
}

.nav-title {
    display: block;
}

.menu {
    background-color: var(--clr-groen);
}

.logo {
    color:var(--clr-groen);
    text-decoration: none;
}

.logo img{
    display: inline-block;
    width: 2.5vw;
    -webkit-transition: -webkit-transform 2s;
}

.logo img:hover{
    -webkit-transform: rotate(360deg);
}

.logo h2{
    text-align: center;
    vertical-align: 30%;
    padding-left: 5px;
    display: inline-block;
    font-size: 2.0vw;
}

.searchbar-div {
    width: 100%;
    height: 75px;
}
.searchbar-margin {
    margin: 0 10%;
    height: 100%;
}

.searchbar-main {
    position: relative;
    text-align: center;
    border-radius: 2px;
    height: 100%;
}

.searchbar-main-content {
    height: 100%;
    z-index: 5;
    background-color: #fff;
    border-radius: 2px;
    box-shadow: 0 2px 7px 0 hsla(0,0%,82.4%,.25);
}

.searchbar-input {
    font-size: 1vw;
    /* color: #707c75; */
    height: 100%;
    padding-left: 30px;
    margin: 0;
    border: 2px solid var(--clr-groen);
    border-radius: 5px;
    width: 90%;
    outline: none;
}

.searchbar-button {
    border: 2px solid var(--clr-groen);
    border-radius: 5px;
    height: 100%;
    width: 5%;
    margin: 0;
    float: right;
}

.fa-search {
    color: var(--clr-groen);
    font-size: 20px;
}

::-webkit-search-cancel-button{
    position:relative;
    right:20px;    
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #96a39c;
    opacity: 1; /* Firefox */

}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #96a39c;
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: #96a39c;
}

.burger {
    display: none;
    cursor: pointer;
}

.burger div {
    width: 25px;
    height: 3px;
    background-color: var(--clr-groen);
    margin: 5px;
    transition: all 0.3s ease;
}

@media screen and (max-width:1300px){
    .nav-links{
        width: 60%;
    }
}

/* When the screen is less than 1100px wide, stack the links and the search field vertically instead of horizontally */
@media screen and (max-width:1100px){
    body{
        overflow-x: hidden;
    }

    .logo h2 {
        display: none;
    }

    .logo img{
        width: 5vw;
    }

    /* burger menu background */
    .nav-links{
        position: absolute;
        right: 0px;
        height: 60vh;
        top: 6vh;
        background-color: var(--clr-groen); opacity: 0.90;
        display: none;
        flex-direction: column;
        text-align: center;
        z-index: 9999;
        width: 50%;

        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }
    .nav-links li{
        opacity: 0;
    }

    .nav-links a{
        color: var(--clr-wit);
        font-size: 1.5vw;
    }

    .nav-links a:hover{
        border-bottom: 0.2vw solid var(--clr-wit);
    }

    .burger{
        display: block;
    }

    .welcome-div h1, .welcome-div h2{
        font-size: 3.5vw;
    }
    
    .welcome-div p{
        font-size: 2vw;
    }

    .welcome-div button{
        font-size: 2vw;
        border: 2vw solid  #4b9600;
        border-radius: 2vw;
        margin-bottom: 10px;
    }

    .Explore-btn:hover{
        background-color: #1b701b;
        border-color: #1b701b;
    }

    /* Advertisement plant name */
    .description h2{
        font-size: 4vw;
    }

    /* Advertisement description headers and description details */
    .description h3, .description h3 span{
        font-size: 3vw;
    }
}

/* Nativagion bar toggle */
.nav-active{
    transform: translateX(0%);
    display: flex;
}

@keyframes navLinkFade{
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

/* Burger menu toggle */
.toggle .line1{
    transform: translateY(8px) rotate(-45deg);
}

.toggle .line2{
    opacity: 0;
}

.toggle .line3{
    transform: translateY(-8px) rotate(45deg);
}
/* ... */

